2008-10-25 20:48-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* Version: 0.5

2008-10-22 Riccardo Mottola <rmottola@users.sf.net>

	* English.lproj/Info.gorm: correct bugtracker URL

2008-10-22 Wolfgang Lux <wolfgang.lux@gmail.com>

	* Framework/PCProjectBuilder.m: fix memory related crash
	* Framework/PCProjectBuilder.m,
	Modules/Projects/Application/PCAppProject.m,
	Modules/Projects/Tool/PCToolProject.m: enhancements for relative install paths

2008-10-18 18:18-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* ChangeLog: Moved to here top level of project.
	* Documentation/ChangeLog: Removed from here...
	* Modules/Editors/ProjectCenter/PCEditor.m: Corrected an issue in the
	windowDidResignKey: method which was making the window the first
	responder.  This was preventing Find from working properly.

2008-02-20 Sergii Stoian <stoyan255@gmail.com>

        * Framework/PCProjectBuilder.m: 
	  (-parseErorLine:): Fixed type of saved row and column values.
	  Cleanup.
	* Framework/PCEditorManager.m: 
	  (-openEditorForFile:editable:windowed:): Fixed another NSLog 
	  parameter missing.

2008-02-19 Sergii Stoian <stoyan255@gmail.com>

        * PCMenuController.m: Start thinking about "Go to line:" popup.
        * English.lproj/ProjectCenter.gorm: Added "Edit->Find->Line Number..."
        menu item.
        * Framework/PCProjectBrowser.m: (-nameOfSelectedFile:): Improve
        category select detection.
        (-pathToSelectedFile:): Use nameOfSelctedFile:. Cleanup.
        (-nameOfSelctedCategory:): Return project name if subproject is
        selected.
        * Framework/PCProjectEditor.m:
        (-openEditorForCategoryPath:windowed:): Use PCEditor's
        fileStructureItemSelected if file structure component selected
        in browser.
        * Framework/PCProjectBuilder.m: Go to line number in editor
        on error/warning click functionality implemented.
        * Framework/PCProjectWindow.m: Cleanup.