@@ -418,21 +418,25 @@ NSString *PCBrowserDidSetPathNotification = @"PCBrowserDidSetPathNotification";
 
   if ([self nameOfSelectedFile] != nil) 
     {
-/*      PCLogInfo(self, @"{doubleClick} filePath: %@", filePath);*/
+      BOOL foundApp = NO;
+      // PCLogInfo(self, @"{doubleClick} filePath: %@", filePath);*/
 
       workspace = [NSWorkspace sharedWorkspace];
-      [workspace getInfoForFile:filePath application:&appName type:&type];
-//      NSLog (@"Open file: %@ with app: %@", filePath, appName);
+      foundApp = [workspace getInfoForFile:filePath 
+			    application:&appName type:&type];
+      // NSLog (@"Open file: %@ with app: %@", filePath, appName);
 
       // If 'Editor' role was set in .GNUstepExtPrefs application
       // name will be returned according that setting. Otherwise
       // 'ProjectCenter.app' will be returned accoring to NSTypes
       // from Info-gnustep.plist file of PC.
-      if (appName == nil ||
-	  [appName isEqualToString:@"ProjectCenter.app"])
+      if(foundApp == NO)
 	{
-	  [[project projectEditor] openEditorForCategoryPath:[browser path]
-						    windowed:YES];
+	  if (appName == nil || [appName isEqualToString:@"ProjectCenter.app"])
+	    {
+	      [[project projectEditor] openEditorForCategoryPath:[browser path]
+				       windowed:YES];
+	    }
 	}
       else
 	{
